# devit

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  Makefile  README.md  devit.core.toml.example
crates/agent/src/: lib.rs
crates/backends/claude/: Cargo.toml
crates/backends/claude/examples/: chat_example.rs
crates/backends/claude/src/: lib.rs
crates/backends/core/: Cargo.toml
crates/backends/core/src/: lib.rs  tool_calling.rs
crates/backends/llama-cpp/: Cargo.toml
crates/backends/llama-cpp/src/: lib.rs
crates/backends/lmstudio/: Cargo.toml
crates/backends/lmstudio/src/: lib.rs
crates/backends/ollama/: Cargo.toml
crates/backends/ollama/src/: lib.rs
crates/backends/openai_like/src/: lib.rs
crates/build-info/: build.rs
crates/build-info/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/benches/: compression_bench.rs
crates/cli/src/: attest.rs  capabilities.rs  commit_msg.rs  context.rs  lib.rs  main.rs  mcp.rs  merge_assist.rs  plugins.rs  precommit.rs  recipes.rs  report.rs  sbom.rs  test_runner.rs
crates/cli/src/core/: atomic_patcher.rs  config.rs  errors.rs  file_ops.rs  formats.rs  fs.rs  help_system.rs  journal.rs  mod.rs  num_compat.rs  orchestration.rs  patch.rs  patch_compat.rs  patch_parser.rs  patch_preview.rs  path_security.rs  policy.rs  request_id.rs  safe_write.rs  sandbox.rs  schema.rs  serde_api.rs  snapshot.rs  snapshot_api.rs
crates/cli/src/core/security/: mod.rs  workspace.rs
crates/cli/src/platform/: mod.rs  permissions.rs  shell.rs
crates/cli/tests/: approval.rs  common.rs  compression_tests.rs  contract_test_2.rs  contract_test_3.rs  contract_test_4.rs  contract_test_5.rs  contract_test_6.rs  contracts.rs  e2e_orchestration.rs  e2e_patch_apply.rs  e2e_runner_complete.rs  help_system_tests.rs  integration_core.rs  it_rc1_journal.rs  it_rc1_patch_apply.rs  it_rc1_policy_approval.rs  it_rc1_snapshot.rs  it_rc1_test_runner.rs  mcp_ext_tests.rs  mcp_file_write.rs  mcp_journal_append.rs  mcp_patch_apply.rs  mcp_schema.rs  mcp_snapshot.rs  mcp_watchdog.rs  orchestration_integration_tests.rs  recipes.rs  test_path_security_c4.rs  test_runner_e2e.rs  tools_json.rs
crates/cli/tests/core/: policy_tests.rs
crates/cli/tests/fixtures/: config.rs  mcp.rs  mod.rs  patches.rs  snapshots.rs
crates/common/: Cargo.toml
crates/common/src/: cache.rs  lib.rs  limits.rs  process_registry.rs  process_utils.rs  session.rs
crates/common/src/fs/: mod.rs  safe_write.rs
crates/common/src/orchestration/: mod.rs  orchestration.rs  types.rs
crates/context-engine/: Cargo.toml
crates/context-engine/src/: lib.rs  types.rs
crates/context-engine/src/chunker/: mod.rs  tree_sitter_chunker.rs
crates/context-engine/src/diff/: mod.rs
crates/context-engine/src/embedder/: mod.rs  ollama.rs
crates/context-engine/src/indexer/: mod.rs
crates/context-engine/src/query/: mod.rs
crates/context-engine/src/store/: mod.rs  sqlite.rs
crates/devit-agent/src/: main.rs
crates/mcp-core/src/: lib.rs
crates/mcp-server/src/: auth.rs  http_server.rs  lib.rs  main.rs  transport.rs
crates/mcp-tools/: Cargo.toml
crates/mcp-tools/src/: archive.rs  atomic_patcher.rs  cargo.rs  clipboard.rs  db_query.rs  directory_list.rs  docker.rs  doctor.rs  errors.rs  exec.rs  explorer.rs  fetch_url.rs  file_explore.rs  file_ops.rs  file_read.rs  file_write.rs  forum.rs  git.rs  git_ops.rs  help.rs  journal.rs  journal_best_effort.rs  keyboard.rs  kill.rs  lib.rs  mouse.rs  net_utils.rs  ocr.rs  ocr_alerts.rs  orchestration.rs  output_shaper.rs  patch_apply.rs  ports.rs  ps.rs  pwd.rs  read_image.rs  read_pdf.rs  resource_monitor.rs  screenshot.rs  search_web.rs  (+5 more)
crates/mcp-tools/src/aircp/: mod.rs  unified.rs
crates/mcp-tools/src/memory/: mod.rs  soul.rs  store.rs  tool.rs
crates/mcp-tools/tests/: article_extract_s1.rs  etld1_shape_s1.rs  meta_shape_s1.rs  shape_s1.rs
crates/orchestration/examples/: basic_delegation.rs  daemon_monitoring.rs
crates/orchestration/src/: backend.rs  daemon.rs  lib.rs  local.rs  types.rs
crates/orchestration/src/ipc/: mod.rs  unix.rs  windows.rs
crates/orchestration/tests/: ack_stability.rs  integration_tests.rs
crates/rag/: Cargo.toml
crates/rag/src/: main.rs
crates/rag/tests/: cli.rs
crates/sandbox/src/: lib.rs
crates/sandbox/src/backend/: mod.rs  unix.rs  windows.rs
crates/studio/: Cargo.toml  README.md  build.rs  tauri.conf.json
crates/studio/assets/: README.md
crates/studio/capabilities/: default.json
crates/studio/src/: lib.rs  main.rs  state.rs
crates/studio/src/ghost/: cursor.rs  mod.rs  stream.rs
crates/studio/src/ipc/: context.rs  context_manager.rs  editor.rs  ghost.rs  llm.rs  lsp.rs  mod.rs  session.rs  settings.rs  structured_edit.rs  terminal.rs  watcher.rs  workspace.rs
crates/studio/src/lsp/: client.rs  mod.rs  registry.rs
crates/studio/src/workspace/: mod.rs
crates/tools/src/: codeexec.rs  fs.rs  git.rs  lib.rs  mod.rs  shell.rs
crates/tui/src/: lib.rs
crates/tui/tests/: cli.rs
devitd/src/: compact.rs  journal.rs  main.rs  policy.rs  process_registry.rs  process_utils.rs  reaper.rs  worker_executor.rs
devitd/tests/: ack_socket_unix.rs  windows_pipes.rs
docs/: CONFIGURATION.md
editors/vscode/devit-vscode/: package.json
examples/plugins/echo_sum/src/: main.rs
src/: doctor.rs
studio-ui/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
studio-ui/src/: App.svelte
studio-ui/src/components/: ActionBar.svelte  ActivityBar.svelte  BottomPanel.svelte  Chat.svelte  Editor.svelte  Explorer.svelte  Functions.svelte  HunkControls.svelte  Modal.svelte  ModelSettingsModal.svelte  Output.svelte  ProviderModal.svelte  Search.svelte  SettingsModal.svelte  StatusBar.svelte  TeamPanel.svelte  Terminal.svelte  Toolbar.svelte
studio-ui/src/lib/: aircp-commands.ts  aircp-store.svelte.ts  aircp_generated.ts  ghost-cursor.ts  git-gutter.ts  hdds-client.js  stores.ts  tauri-ipc.ts  topics.ts
studio-ui/src/styles/: global.css
tests/: security_workspace.rs
