# -----------------------------
# Top-level Cargo.toml (workspace)
# -----------------------------

[workspace]
members = [
    "crates/build-info",
    "crates/cli",
    "crates/agent",
    "crates/common",
    "crates/sandbox",
    "crates/backends/core",
    "crates/backends/openai_like",
    "crates/backends/ollama",
    "crates/backends/lmstudio",
    "crates/backends/llama-cpp",
    "crates/backends/claude",
    "crates/tools",
    "crates/mcp-core",
    "crates/mcp-tools",
    "crates/mcp-server",
    "crates/orchestration",
    "crates/context-engine",
    "devitd",
    "devitd-client",
    "crates/studio",
    "crates/rag",
]
resolver = "2"



[workspace.package]
edition = "2021"
version = "0.1.0"
homepage = "https://getdevit.com/"
repository = "https://git.hdds.io/hdds/devit"
license = "Apache-2.0"


[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "gzip", "brotli", "stream", "rustls-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "net", "io-util", "io-std", "sync", "time"] }
tokio-stream = "0.1"
axum = "0.7"
tower = { version = "0.4", features = ["make", "util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
futures-core = "0.3"
futures-util = "0.3"
hyper = "1"
ratatui = "0.28"
crossterm = "0.28"
async-trait = "0.1"
which = "6"
bytes = "1"
walkdir = "2"
sha2 = "0.10"
hex = "0.4"
hmac = "0.12"
rand = "0.8"
blake3 = "1.5"
regex = "1"
tempfile = "3"
shell-escape = "0.1"
