# -----------------------------
# crates/studio/Cargo.toml
# devit-studio - IDE with integrated LLM
# -----------------------------

[package]
name = "devit-studio"
version.workspace = true
edition = "2021"
description = "Local-first IDE with integrated LLM, ghost cursor, and dockable panels"

[dependencies]
# Workspace deps
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
async-trait = { workspace = true }
futures-util = { workspace = true }
tokio-stream = { workspace = true }

# Tauri 2.x (webkit2gtk-4.1 + libsoup3)
tauri = { version = "2.5", features = [] }
tauri-plugin-dialog = "2.2"
tauri-plugin-fs = "2.2"

# LSP
tower-lsp = "0.20"
lsp-types = "0.95"

# Internal crates
devit-common = { path = "../common" }
devit-backend-core = { path = "../backends/core" }
devit-ollama = { path = "../backends/ollama" }
devit-lmstudio = { path = "../backends/lmstudio" }
devit-llama-cpp = { path = "../backends/llama-cpp" }
devit-claude = { path = "../backends/claude" }
mcp-core = { path = "../mcp-core" }
mcp-tools = { path = "../mcp-tools" }
context-engine = { path = "../context-engine" }

# Utils
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
notify = "6"
parking_lot = "0.12"
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

# PTY for terminal
portable-pty = "0.8"

[build-dependencies]
tauri-build = { version = "2.5", features = [] }

[dev-dependencies]
regex = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[[bin]]
name = "devit-studio"
path = "src/main.rs"
