[package]
name = "devit-lmstudio"
version.workspace = true
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures-util = { workspace = true }
bytes = { workspace = true }
devit-backend-core = { path = "../core" }
